# Labs

01-Lab/z1v4/: CMakeLists.txt  main.cpp
01-Sem/04-Lab/: z1.cpp
01-Sem/06_07_UT/07_UT/test/: CMakeLists.txt  class_tests.cpp
01-Sem/06_07_UT/07_UT/test/src/: class.cpp  class.h
01-Sem/07-Lab/: CMakeLists.txt  class.cpp  class.h  class_1.h
01-Sem/08-Кr#2/: file_reader.h  word_card.h
02-Lab/: main.cpp
02-Sem/01-Lab(C++)/: main.cpp  students.h
02-Sem/02-Lab(A)/: 02-Lab(A).cpp
02-Sem/03-Lab(A)/1-Task/: 1-Task.cpp
02-Sem/03-Lab(A)/2-Task/: 2-Task.cpp
02-Sem/04-Lab(A)/1-model lab/: 1-model lab.cpp  1model lab.asm
02-Sem/05-Lab(A)/1-Task/: 1-Task.cpp  1_task.asm
02-Sem/05-Lab(A)/2-Task/: 2-Task2.cpp  2_task.asm
02-Sem/06-Lab(A)/1-Task/: 1-Task.cpp  1_task.asm
02-Sem/06-Lab(A)/2-Task/: 2-Task.cpp  2_task.asm
02-Sem/08-Lab(Win)/: 08-Lab(Win).aps  08-Lab(Win).cpp  08-Lab(Win).rc  08-Lab(Win).sln  08-Lab(Win).vcxproj  08-Lab(Win).vcxproj.filters  Resource.h
02-Sem/08-Lab(Win)/Debug/: 08-Lab(Win).exe.recipe  08-Lab(Win).ilk  08-Lab(Win).res  08-Lab(Win).vcxproj.FileListAbsolute.txt  vc142.idb
02-Sem/6_LAB/: 6_L.txt
02-Sem/9-Lab(Win)/: 9-Lab(Win).cpp  9-Lab(Win).rc  9-Lab(Win).sln  9-Lab(Win).vcxproj  9-Lab(Win).vcxproj.filters  Resource.h
03-Lab/: main.cpp
04-Lab/: z2.cpp
05-Lab/: main.cpp
06-Lab/: class.cpp  class.h  main.cpp
06_07_UT/06_UT/: CMakeLists.txt
07-Lab/: class.cpp  class.h  class_1.cpp  class_2.cpp  class_2.h  main.cpp
08-Lab/: main.cpp
08-Кr#2/: bidirectional_list_on_array.h  vocabulary.h
KR1/: main.cpp
(+36 files in other folders)
